syntax = "proto3";

package weaviategrpc;

option go_package = "github.com/weaviate/weaviate/grpc/generated;protocol";
option java_package = "io.weaviate.grpc.protocol";
option java_outer_classname = "WeaviateProtoSearchGet";

message SearchRequest {
}

message SearchReply {
}

